--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Rubik's Cube Timer</title>
+    <title>ChronoCube</title>
     <link rel="canonical" href="https://chronocube.sooraj.dev/">
     <meta property="og:url" content="https://chronocube.sooraj.dev/">
-    <meta name="description" content="A Rubik's Cube timer that gives you all the information you'll ever need.">
+    <meta name="description" content="A Rubik's Cube timer that gives you all the information you'll ever need. Right at your fingertips.">
     <script type="application/ld+json">
         {
             "@context": "http://schema.org",
@@ -16,18 +16,22 @@
             "url": "https://chronocube.sooraj.dev"
         }
     </script>
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png" media="(prefers-color-scheme: dark)">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png">
+    <link rel="icon" type="image/png" sizes="488x465" href="assets/img/chronocube_logo_2_trans.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="stylesheet" href="assets/css/Footer-Basic.css">
     <link rel="stylesheet" href="assets/css/Header-Dark.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/Navigation-Clean.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
-<body style="background: rgb(255, 255, 255);">
+<body style="background: rgb(0, 0, 0);">
     <!-- Start: Header Dark -->
     <header class="header-dark" style="background: rgb(0, 0, 0);padding-bottom: 0px;">
         <!-- Start: Navigation Bar -->
@@ -44,15 +48,15 @@
         </nav><!-- End: Navigation Bar -->
     </header><!-- End: Header Dark -->
     <!-- Start: Rubik's Cube Timer -->
-    <section class="text-center" style="min-height: 100vh;padding-right: 2%;padding-left: 2%;">
-        <h1 data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-weight: bold;margin-top: 50px;color: rgb(0, 0, 0);font-size: 40px;">ChronoCube</h1>
-        <p class="font-monospace text-center" data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 100px;color: rgb(100, 100, 100);">A Rubik's Cube timer that gives you all the information you'll ever need. Right at your fingertips.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="border-style: none;width: 50vw;" src="assets/img/main_screen.jpg">
-        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 100px;margin-top: 50px;color: rgb(100, 100, 100);">Every single AO you can think of.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;" src="assets/img/stat_section.jpg">
-        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 100px;margin-top: 50px;color: rgb(100, 100, 100);">Customise the look to your personal taste.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;" src="assets/img/split_colour_modes.jpg">
-        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 100px;margin-top: 50px;color: rgb(100, 100, 100);">All your times are within reach.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;" src="assets/img/light_mode.jpg">
-        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 100px;margin-top: 50px;color: rgb(100, 100, 100);">Small footprint. Big features.</p>
+    <section class="text-center" style="min-height: 100vh;padding-right: 2%;padding-left: 2%;background: rgb(255, 255, 255);padding-top: 50px;">
+        <h1 data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-weight: bold;margin-top: 0px;color: rgb(0, 0, 0);font-size: 40px;text-shadow: 0px 0px 5px;">ChronoCube</h1><img class="rounded" data-aos="fade" data-aos-delay="200" data-aos-once="true" style="border-style: none;width: 25%;" src="assets/img/chronocube_logo_2_trans.png">
+        <p class="font-monospace text-center" data-aos="fade" data-aos-delay="50" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 50px;color: rgb(100, 100, 100);">A Rubik's Cube timer that gives you all the information you'll ever need. Right at your fingertips.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="border-style: none;width: 50vw;box-shadow: 0px 0px 50px 5px rgb(30, 30, 30);" src="assets/img/main_screen.jpg">
+        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 100px;color: rgb(100, 100, 100);">Every single AO you can think of.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;box-shadow: 0px 0px 50px 5px rgb(30, 30, 30);" src="assets/img/stat_section.jpg">
+        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 100px;color: rgb(100, 100, 100);">Customise the look to your personal taste.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;box-shadow: 0px 0px 50px 5px rgb(30, 30, 30);" src="assets/img/split_colour_modes.jpg">
+        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 100px;color: rgb(100, 100, 100);">All your times are within reach.</p><img class="rounded" data-aos="fade" data-aos-once="true" style="width: 50vw;border-style: none;box-shadow: 0px 0px 50px 5px rgb(30, 30, 30);" src="assets/img/light_mode.jpg">
+        <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 100px;color: rgb(100, 100, 100);">Small footprint. Big features.</p>
         <p data-aos="fade" data-aos-once="true" style="font-family: 'JetBrains Mono', monospace;font-size: 30px;margin-bottom: 50px;margin-top: 50px;color: rgb(100, 100, 100);">Download now.</p><!-- Start: Buttons -->
-        <div data-aos="fade" data-aos-once="true" class="buttons"><a class="btn btn-primary text-capitalize" role="button" data-aos="fade" data-aos-once="true" href="https://github.com/WhenLifeHandsYouLemons/Rubiks-Cube-Timer/releases" style="color: rgb(255, 255, 255);font-family: 'JetBrains Mono', monospace;font-size: 25px;border-style: none;background: var(--bs-red);">Latest Release</a></div><!-- End: Buttons -->
+        <div data-aos="fade" data-aos-once="true" class="buttons"><a class="btn btn-primary text-capitalize" role="button" data-aos="fade" data-aos-once="true" href="https://github.com/WhenLifeHandsYouLemons/ChronoCube/releases" style="color: rgb(255, 255, 255);font-family: 'JetBrains Mono', monospace;font-size: 25px;border-style: none;background: var(--bs-red);">Latest Release</a></div><!-- End: Buttons -->
         <!-- Start: Spacer -->
         <div style="padding-bottom: 200px;"></div><!-- End: Spacer -->
     </section><!-- End: Rubik's Cube Timer -->
@@ -69,9 +73,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
-    <script src="assets/js/Lightbox-Gallery.js"></script>
 </body>
 
 </html>
